--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -16,4 +16,4 @@ jobs:
     - name: Run tests and collect coverage
       run: pytest --cov=api.calculator --cov-report=xml
     - name: Upload coverage reports to Codecov with GitHub Action
-      uses: codecov/codecov-action@v4.2.0
+      uses: codecov/codecov-action@ea99777a320886485cf1f7b423744b847319196b
