--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -15,5 +15,14 @@ jobs:
       run: pip install -r api/requirements.txt
     - name: Run tests and collect coverage
       run: pytest --cov=api.calculator --cov-report=xml
-    - name: Upload coverage reports to Codecov with GitHub Action
-      uses: codecov/codecov-action@v4
+#    - name: Upload coverage reports to Codecov with GitHub Action
+#      uses: codecov/codecov-action@v4
+    - name: Checkout codecov-cli test branch
+      uses: actions/checkout@v4
+      with:
+        repository: codecov/codecov-cli
+        ref: nora/2298
+    - name: Run Codecov with test branch of CLI
+      run: |
+        pip install .
+        codecovcli -v upload-process
