--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -17,13 +17,11 @@ jobs:
       run: pytest --cov=api.calculator --cov-report=xml
 #    - name: Upload coverage reports to Codecov with GitHub Action
 #      uses: codecov/codecov-action@v4
-    - name: Install build tools
-      run: sudo apt-get install build-essential libffi-dev python3-dev gcc
     - name: Checkout codecov-cli test branch
       uses: actions/checkout@v4
       with:
         repository: codecov/codecov-cli
-        ref: nora/2298
+        ref: main
     - name: Run Codecov with test branch of CLI
       run: |
         pip install .
