--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -2,33 +2,54 @@ name: API workflow
 
 on: [push, pull_request]
 
+#jobs:
+#  build:
+#    runs-on: ubuntu-latest
+##    container:
+##      image: python:3.10-alpine
+#    name: Test python API
+#    steps:
+#    - uses: actions/checkout@v4
+#    - uses: actions/setup-python@v2
+#      with:
+#        python-version: '3.10'
+#    - name: Install requirements
+#      run: pip install -r api/requirements.txt
+#    - name: Run tests and collect coverage
+#      run: pytest --cov=api.calculator --cov-report=xml
+##    - name: Upload coverage reports to Codecov with GitHub Action
+##      uses: codecov/codecov-action@v4
+##    - name: Install build dependencies for Alpine
+##      run: apk add --no-cache build-base libffi-dev python3-dev gcc g++
+##    - name: Checkout codecov-cli test branch
+##      uses: actions/checkout@v4
+##      with:
+##        repository: codecov/codecov-cli
+##        ref: main
+#    - name: Install codecov-cli
+#      run: pip install codecov-cli
+#    - name: Run Codecov with test branch of CLI
+##      run: |
+##        pip install .
+#      run: codecovcli -v upload-process
+
 jobs:
   build:
     runs-on: ubuntu-latest
-#    container:
-#      image: python:3.10-alpine
     name: Test python API
     steps:
     - uses: actions/checkout@v4
+      with:
+        repository: nora-codecov/codecov-cli
+        ref: nora/2298
     - uses: actions/setup-python@v2
       with:
-        python-version: '3.12'
+        python-version: '3.10'
     - name: Install requirements
       run: pip install -r api/requirements.txt
+    - name: Install codecov-cli
+      run: pip install .
     - name: Run tests and collect coverage
       run: pytest --cov=api.calculator --cov-report=xml
-#    - name: Upload coverage reports to Codecov with GitHub Action
-#      uses: codecov/codecov-action@v4
-#    - name: Install build dependencies for Alpine
-#      run: apk add --no-cache build-base libffi-dev python3-dev gcc g++
-#    - name: Checkout codecov-cli test branch
-#      uses: actions/checkout@v4
-#      with:
-#        repository: codecov/codecov-cli
-#        ref: main
-    - name: Install codecov-cli
-      run: pip install codecov-cli
     - name: Run Codecov with test branch of CLI
-#      run: |
-#        pip install .
       run: codecovcli -v upload-process
