--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     name: Test python API
     steps:
-    - uses: actions/checkout@v4
+#    - uses: actions/checkout@v4
     - uses: actions/setup-python@v2
       with:
         python-version: '3.10'
