--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -7,7 +7,10 @@ jobs:
     runs-on: ubuntu-latest
     name: Test python API
     steps:
-#    - uses: actions/checkout@v4
+    - uses: actions/checkout@v4
+      with:
+        repository: codecov/codecov-cli
+        ref: main
     - uses: actions/setup-python@v2
       with:
         python-version: '3.10'
@@ -17,13 +20,11 @@ jobs:
       run: pytest --cov=api.calculator --cov-report=xml
 #    - name: Upload coverage reports to Codecov with GitHub Action
 #      uses: codecov/codecov-action@v4
-    - name: Install Tree-sitter dependencies
-      run: sudo apt-get install libtree-sitter-dev
-    - name: Checkout codecov-cli test branch
-      uses: actions/checkout@v4
-      with:
-        repository: codecov/codecov-cli
-        ref: main
+#    - name: Install Tree-sitter dependencies
+#      run: sudo apt-get install libtree-sitter-dev
+#    - name: Checkout codecov-cli test branch
+#      uses: actions/checkout@v4
+
     - name: Run Codecov with test branch of CLI
       run: |
         pip install .
