--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -26,6 +26,7 @@ jobs:
         ref: main
     - name: Run Codecov with test branch of CLI
       run: |
-        pip install tree-sitter==0.20.4
+#        pip install tree-sitter==0.20.4
+        pip install -r requirements.txt
         pip install .
         codecovcli -v upload-process
