--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: codecov/codecov-cli
-          ref: main
+          ref: bd84ee595d111c01e8967f3b382e8a66492fe127
           submodules: 'true'
       - name: Run Codecov with test branch of CLI
         run: |
@@ -26,11 +26,6 @@ jobs:
         run: pip install -r api/requirements.txt
       - name: Run tests and collect coverage
         run: pytest --cov=api.calculator --cov-report=xml
-#    - name: Upload coverage reports to Codecov with GitHub Action
-#      uses: codecov/codecov-action@v4
-#    - name: Install Tree-sitter dependencies
-#      run:  pip install tree-sitter==0.20.4
       - name: Upload to Codecov
         run: |
           codecovcli -v upload-process
-    
