--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -27,6 +27,4 @@ jobs:
         run: pytest --cov=api.calculator --cov-report=xml
       - name: Upload to Codecov
         run: |
-          codecovcli -v create-commit
-          codecovcli -v create-report
-          codecovcli -v do-upload
+          codecovcli -v upload-process
