--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -27,4 +27,5 @@ jobs:
         run: pytest --cov=api.calculator --cov-report=xml
       - name: Upload to Codecov
         run: |
+          set -e  # Stop script on error?
           codecovcli -v upload-process
