--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -16,10 +16,10 @@ jobs:
         with:
           python-version: '3.10'
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: pip install -r api/requirements.txt
       - name: Run tests and collect coverage
         run: pytest --cov=api.calculator --cov-report=xml
       - name: Upload to Codecov
-        uses: codecov/codecov-action@v5-beta
+        uses: codecov/codecov-action@v5.0.0-beta
         with:
           verbose: true
